--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,16 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "GIT";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>Esta aplicacion utliza las soguientes tecnologias, Descargue los archivos GIT <a href="https://github.com/herberthebm/fish_web.git" target="_blank">aqui</a>.</p>
+<ol>
+    <li>.NET Core 5</li>
+    <li>C#</li>
+    <li>Bootstrap 5</li>
+    <li>MVC</li>
+    <li>Microsoft Azure / SQL Databeses</li>
+    <li>Microsoft Azure / App Services</li>
+    <li>API</li>
+    <li>Xamarin</li>
+</ol>
