--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -31,9 +31,8 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="TblProductoes" asp-action="Index">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Git</a>
+                        </li>                        
                     </ul>
                 </div>
             </div>
